fix(page-header): resolve logo cropping on small screens
Resolves #492

--- a/stories/Components/PageHeader/page-header.scss
+++ b/stories/Components/PageHeader/page-header.scss
@@ -40,10 +40,9 @@
 
   &__logo-img {
     @media (max-width: $mg-breakpoint-tablet) {
-      object-fit: cover;
+      object-fit: contain;
       width: 175px;
       height: 48px;
-      object-position: 0% 50%;
     }
 
     @media (max-width: $mg-breakpoint-desktop-wide) {
